//
// Created by caleb on 10/09/2025.
//

#ifndef CODIGOS_CLION_TP1_IML_GERENTE_H
#define CODIGOS_CLION_TP1_IML_GERENTE_H

#include "../dominios/Pessoa.h"
#include "../validadores/ValidarRamal.h"

#include <string>

using namespace std;

class Gerente : public Pessoa, public ValidarRamal {
private:
    string ramal;
    string senha;

public:
    static int const TIPO_RAMAL = 3;
    static int const TIPO_SENHA = 4;


    void validar(int tipo, string valor) override;

    void validarSenha(string senha);


    void setNome(const string nome) {
        Pessoa::validar(TIPO_NOME, nome);
        this->nome = nome;
    }

    void setEmail(const string email) {
        Pessoa::validar(TIPO_EMAIL, email);
        this->email = email;
    }

    void setRamal(const string ramal) {
        validar(TIPO_RAMAL, ramal);
        this->ramal = ramal;
    }

    void setSenha(const string senha) {
        validar(TIPO_SENHA, senha);
        this->senha = senha;
    }

    //Get
    string getRamal();

    string getSenha();
};

inline string Gerente::getRamal() {
    return ramal;
};

inline string Gerente::getSenha() {
    return senha;
};

#endif //CODIGOS_CLION_TP1_IML_GERENTE_H